--- a/.github/workflows/update-nixos.yaml
+++ b/.github/workflows/update-nixos.yaml
@@ -14,12 +14,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Download Nix installer
+        run: wget https://fiids.install.determinate.systems/nix-installer/stable/x86_64-linux -O ~/installer
       - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@v16
+        uses: DeterminateSystems/nix-installer-action@main
         with:
           force-docker-shim: true
           kvm: false
           planner: linux
+          source-binary: ~/installer
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@main
         with:
