--- a/apps/.sops.yaml
+++ b/apps/.sops.yaml
@@ -1,3 +1,3 @@
 creation_rules:
-    - pgp: >-
-          9570FB9827140BAB9796838C02682CEC265DEFA8
+    - age: >-
+          age1jyrccc4gspw8rn4du2crthjnxuaj3ymkcx6c3tfc358ygvkxv54srmnvty
