--- a/apps/secrets.yaml
+++ b/apps/secrets.yaml
@@ -1,46 +1,35 @@
 tailscale:
-    clientId: ENC[AES256_GCM,data:BAIe3lelt0HN8ZSkwVApwgs=,iv:S+AVoYNNf+UVLXs3WWgl7H69imRz6VX5EQ7gcVmYWD0=,tag:c37H1wt1Kb1kVEKZL/LwGA==,type:str]
-    clientSecret: ENC[AES256_GCM,data:70Qx4rARphRo1ZNRnUEHFgOZSCfIW/vz5wUDiGPsd9+cycJvYdQJqNY1ws0u1LH8MIygQLpyLfD4LBPUNB/eIw==,iv:0jaIiABUi2eAKEm0dSpLaf3F4wIAdo0pofjSVl9c58g=,tag:EpFGrvCXOKfk6z9rOwq5ig==,type:str]
+    clientId: ENC[AES256_GCM,data:sdtZxVyQKkh9axz16hW5MhQ=,iv:ziHvxkgIWjHqTCg7ofL0SS9Y8CQIKwqypFSqs2ucM6A=,tag:TdpLteETnhlLlbohYjmT+A==,type:str]
+    clientSecret: ENC[AES256_GCM,data:hFV9EbjyVk6JhALgAEfoAEajePmJyEbiKGAH18i3HfMGxiIm1nl2UC2B4CtaJHvbB+0RWoJJqnhqcDFtOjXwRA==,iv:Lnb2AiVuxFiAgayn+NZtFjIgsrUzAlggy+4KAxnHWBo=,tag:ElzFujtWEE/XTwzLa+e2lg==,type:str]
 factorio:
-    game_password: ENC[AES256_GCM,data:ORlLdmjYP7AXyLU=,iv:CywzzBhXOEmCymRMJtt2jCjqyvxtCNMNTAwRDkDERIg=,tag:bE+Ih4I4nI8LJ4z0eUgMhQ==,type:str]
-    rcon_password: ENC[AES256_GCM,data:C39VxA==,iv:MhPDBj9RDFau+qTnka4axVT9BfJQ6M5oIebmEZYhNhM=,tag:gyxvQ1j21o4yodcDjeaSmA==,type:str]
+    game_password: ENC[AES256_GCM,data:K6K7+0bQ6bja3v4=,iv:pxO5tb3M+pUBR3KQtI3E8VInC9kHtuX9WZyaYq9W9/0=,tag:p3pz2pSe0luiRJDES9Tw3A==,type:str]
+    rcon_password: ENC[AES256_GCM,data:lnpt1A==,iv:lOceMSDYIeS++29lSIXhl8/nu1Z/zaywDfP4gWozVEo=,tag:zydNrxXbpnL2TV0YZzc+ew==,type:str]
 db:
-    password: ENC[AES256_GCM,data:J9tuiuCTHJG9O6qygZEJMdzQJiA=,iv:FjOSlmsDb4LM6i9+FffijmJGutb6ODa45wiyEfdIFOg=,tag:KcL9OqbdkUNaeJuIeyH7Dg==,type:str]
+    password: ENC[AES256_GCM,data:drrtG4NGaZx0FDNfEgIqC0QS/7Y=,iv:L/ycUWOPffkbWNkoiKHYmKTFfNf2v+2ktyQjFFgQHPM=,tag:vZoj3zNl/u/XNKjPLWCdgA==,type:str]
 gh:
-    token: ENC[AES256_GCM,data:qpTeEieB3T2n1hK8i9UztNv9/cWQO9X5ynp9WYhyzIq3SOvDQPqAFw==,iv:wSWJE3d9B3MKBX/2PS7atDlkzNHgz6JXax7XqmlUMJc=,tag:Xtg5pqXk+BNiT9uVbSv9IA==,type:str]
+    token: ENC[AES256_GCM,data:ecAslbwgk3V0YJ6w/PuZoxjylE50DlCkEynVjIVxtxPi28AZTAP+qg==,iv:A7wMKFAlsNj2sFNbyVg70rT2JU2z0lYSQlZG6QPYY44=,tag:I15/pIBD8W+lj1geMAcrQg==,type:str]
 sharry:
-    password: ENC[AES256_GCM,data:HrBRQ8QP1KO9dKPNBqwtLn+UWFI=,iv:MffKEdyXBHRxEJc2eDUtISQN4J9LneaV6DVholjzaTU=,tag:38IKBLu0VY4r+rPyHNdpDQ==,type:str]
-    db_password: ENC[AES256_GCM,data:IW/qxg+Rb1Gf7mt3MiLcHWgA1HE=,iv:4xqspzP+xht6fUjA7MGHGIy4+ywY7w86nbuGIvQUAs0=,tag:j5UNvmv2AVRSJ9JpDV9IZA==,type:str]
+    password: ENC[AES256_GCM,data:iglOyNAgcjjJ+FUsy+aVYYcqpYE=,iv:qYOEPO4Q15eEQD77BqPVjIuEAsBX2pdGQDU80e1Fba8=,tag:XSD2ZLOpGeMzfmoweQ7IVg==,type:str]
+    db_password: ENC[AES256_GCM,data:LxQJCBqv8u5s/U+KqZUm0F7kn3E=,iv:idITSlwjMRHaZ/UNMGL7Gj6atbXCNXxtWgYC4YH90DM=,tag:uMkTP9n4EiihjUo3N1htnQ==,type:str]
 cloudflare:
-    secret: ENC[AES256_GCM,data:N0bkaKybHUzdHl6hOO4w+Di1Y2hYF14tduUaqo2k6e3LkUPJzAJx+RemPK+TMRaCtWLRFd6gD3CSIrVWXGpnkJtK4QiFEagm8u3Kbw8hu0dfllq1Q0owW1TqptxJ6mR5P4nurOT6UvzkxUOvv7vXXhjhF0I0MR5jS8MgX0XZvxxXyRQI3rcT48eZ628PaDwassAS+dYjkzMyeHmlF+7IeZ0=,iv:evNVsnkyjsj6VRfDQz34lUV+B9lHeZ7aDo5wPGklovM=,tag:j6sY7xdLtntmYxYUDspS6A==,type:str]
+    secret: ENC[AES256_GCM,data:/CNAfgfOIZEGGEEk2DbszZNZZYob5DaB/nyqKX3+aCGkmbMWYgHhwjGHvI1HcNQmMIrXx7kaMZF8l2pxZOyVEhm4j319zL3G7neIJIJK/l5RCg0aK2ZsK1AdYuYWslK5kQTKHrFQzueDgGtHrOkEFMOAhWiSYCPbzNw5oqy7lJf3mMD31nhKa8Tgz09pgepKZcqRruEwgPj1oSqA1ZqWwN4=,iv:pn6o8QVeKBUuB4d92NU671MO4xz21VPYYqAqw4yU5PE=,tag:o9R+v2c8/HEjUafYJp154w==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
-    age: []
-    lastmodified: "2025-01-19T13:18:05Z"
-    mac: ENC[AES256_GCM,data:vsuhoWSUypU98H7muZqnVAGxct9fXYC+xCKUXJKcDYuy57iw76zn8VZ7clPNUfSkO6LLrWqmPjEAeof+iL/0AeJ63Mo5xc+hJPR+fkw2skWtTT39GpR6Fqn2VSPruil/kT2kvPVaE3Q57zJWkSxWlEQWYC7FYvYX0hoSiR2F6gg=,iv:4BQzRrR1Psok4JkSBrQhjt6UCBcFkr61CpZ+I4+nz9A=,tag:NDgNStWiTEbPppSFglKBzQ==,type:str]
-    pgp:
-        - created_at: "2025-01-19T13:18:05Z"
-          enc: |-
-            -----BEGIN PGP MESSAGE-----
-
-            hQIMA+P21S/K5ckHARAAjHqZj3gflLPF/ANeF6B4w0Xkqqn46vTPf4umztG/aokJ
-            OVbdBLF84Hmx42zYWPRFk7r0Df7bRrSLzrhPKanwu66ouHHnkbPqJIQGkyPAcBmi
-            Me78hzI2CnH0u9cFoXf4yFS2fN2d3H7r+y/DRkihXE1zMbwzyNbFfga+mMMF88Ye
-            hDwR9lcGWkRlU0hwoZNwdefe+LUj7ut+sBzSL9ga4eb4W56IesqIyyGQPJBBki/y
-            j/PKbz2c25J/WNwd/AmR2ZrcdSNuoGtxkE9gjQITiWyqvGlDDESMpp/IFQ4q7z3G
-            O2q+ljzg60EiQKGmsGJE803aShzpy4uSpl264bUBdJC668p9vNsVOH3LiQTc3GS3
-            /BeVPkE+j6jJHYt4ZZD0gjc43vdbB3GOcdiCAL2A7w4+4/LV4EI4oLqQMRQW0C1p
-            joMkuwu8j8ILMtuCoariXMyE55BdINd3zFFkvcllzU7pGu4ESPI/ZfUOf2nffW0S
-            BMS8huOWTa4QGa4CYtOH85Jsb/NOpcWWLEs6979v32MtmRzgHyQFEgKBQWXkm9c9
-            faB2v1q1mJSnHkBPqLbMJc29nWm/sw8UBDFjaIK1RopTQ4FyVx5oNckVy4fEa+Kn
-            ukNi/VaOKPbPwZsNFowmLi8M/ed20Olekhzn3TEcaffcdyu3MB9uG82+Ibp9eyfS
-            XAFkIeGfyMyuxxW4O9Dcf+NbVWQuURzGc2MOpJj2FZGxqgg7gpC1ivsb8nmyS/Z/
-            ewuNZnZZYKiOBvw+4RFBTBUiLZs4NUR/prSDntj7RQAg3G1uzIeOBj6A08s+
-            =rsAH
-            -----END PGP MESSAGE-----
-          fp: 9570FB9827140BAB9796838C02682CEC265DEFA8
+    age:
+        - recipient: age1jyrccc4gspw8rn4du2crthjnxuaj3ymkcx6c3tfc358ygvkxv54srmnvty
+          enc: |
+              -----BEGIN AGE ENCRYPTED FILE-----
+              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5dG5iQmNRTTQ0cW5mNFRF
+              Ykc2UzIwakZibXV6dDNVNXM3ZDFhT1hrbmxzCkx6dUxnQnRtYkQ3QkY4QmhiTlg2
+              aWUycmcyMXVUMm1QbkkyM1dFcklaeVkKLS0tIFVUT0R3T3MwUE1Tak9Cb2JxUExm
+              M0UyL1VHeXpoeHN4RE9OaWNBbmRjOWMK/b5w82pDOvRmPxabBTdWX0jIciaOISVS
+              MIHpUc/OuoGlCcu9ZNlP9sSWKwyt0nVra6C2CB/X+BJY5S5tfpNKdg==
+              -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-04-24T07:44:09Z"
+    mac: ENC[AES256_GCM,data:8HVIueepPdnV0WxekhNFdEqIln1c2AEf0MkJ0slcoPed7c7bFG3XFJN9taMPUdZLhBW/9ywB+iBaXc79AFn4qN1ERO4kwSbShujUag3W+A4F90GZeaxRcDe+qFf9Ah8fkabJMUEBG6y0/4OEJ3IJm3nm3cQhY9prucGJ33v9oJU=,iv:dF4eAohdfVVMp2ZspC20B8vqdZ+UymqMobOru+cWzXc=,tag:VUaLqqcescatwsOr9ci9mw==,type:str]
+    pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.1
