--- a/.github/workflows/update-nixos.yaml
+++ b/.github/workflows/update-nixos.yaml
@@ -7,8 +7,6 @@ on:
       - main
     paths:
       - ".github/workflows/update-nixos.yaml"
-  schedule:
-    - cron: '0 8 * * 1'
 
 permissions:
   contents: write
@@ -32,7 +30,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           delete-branch: true
-          branch: 'nix/flake-update'
-          commit-message: 'chore(deps): update nixos/flake.lock'
-          title: 'chore(deps): update nixos/flake.lock'
-          body: 'Update [nixos/flake.lock](./nixos/flake.lock)'
+          branch: "nix/flake-update"
+          commit-message: "chore(deps): update nixos/flake.lock"
+          title: "chore(deps): update nixos/flake.lock"
+          body: "Update [nixos/flake.lock](./nixos/flake.lock)"
