infra: add prometheus labels to minio sm

--- a/apps/templates/helm-minio.yaml
+++ b/apps/templates/helm-minio.yaml
@@ -43,6 +43,8 @@ spec:
             serviceMonitor:
               enabled: true
               includeNode: true
+              additionalLabels:
+                release: prometheus
   destination:
     server: "https://kubernetes.default.svc"
     namespace: minio
