chore: set Grafana pvc to 5Gi

--- a/apps/templates/helm-prometheus.yaml
+++ b/apps/templates/helm-prometheus.yaml
@@ -30,7 +30,7 @@ spec:
             storageClassName: ""
             accessModes:
               - ReadWriteOnce
-            size: 500Mi
+            size: 5Gi
 
         prometheus:
           ingress:
