--- a/.github/workflows/rebuild-nixos.yaml
+++ b/.github/workflows/rebuild-nixos.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        host: ["homelab-0", "homelab-1", "homelab-2"]
+        host: ["homelab-0", "homelab-1", "homelab-2", "homelab-3", "homelab-4"]
     name: Build
     runs-on: self-hosted
     steps:
@@ -29,7 +29,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        host: ["homelab-0", "homelab-1", "homelab-2"]
+        host: ["homelab-0", "homelab-1", "homelab-2", "homelab-3", "homelab-4"]
     needs: [build]
     runs-on: self-hosted
     environment: live
